crates/uitest/fixtures/parser/newline_ambiguous_minus.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: fixtures/parser/newline_ambiguous_minus.fe
---
error[1-0001]: line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly
  ┌─ newline_ambiguous_minus.fe:2:14
  │
2 │     let a = x
  │              ^ line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly

error[1-0001]: line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly
  ┌─ newline_ambiguous_minus.fe:6:12
  │
6 │         + y
  │            ^ line-start `-` after an expression is ambiguous; move `-` to the previous line for subtraction or parenthesize explicitly
